src/tests/evaluation_error/type_mismatch_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_integer_infix_expression__test_type_mismatch_integer_infix_expression_case_11_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_integer_infix_expression/mod.rs
assertion_line: 38
expression: tokens
---
[
    PositionedToken {
        token: String {
            literal: "456",
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Plus,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 7,
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
]
