src/tests/evaluation_error/type_mismatch_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_integer_infix_expression__test_type_mismatch_integer_infix_expression_case_12_syntax_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: String {
                literal: "456",
            },
            operator: Minus,
            right_hand: Integer {
                literal: 7,
            },
        },
    },
]
